--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Roni Allen - A little about me</title>
+  <title>Toan Tran - A little about me</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -17,7 +17,7 @@
 
 <div class="jumbotron text-center" style="margin-bottom:0">
     <h1>College of Engineering - CSULB </h1>
-  <h3>Roni Allen - Part Time Faculty <i class="fas fa-university" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i></h3>
+  <h3>Toan Tran - Student <i class="fas fa-university" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i></h3>
 
 </div>
 
@@ -32,7 +32,7 @@
         <p class="lead">Welcome! I am Toan Tran, a student at CSULB studying Computer Science. I like to play basketball and play video games for fun.</p>
       </div>
       <div class="col-md-5">
-        <img src="allenr6x6.jpg" alt="Roni Allen" width="400" height="400">
+        <img src="allenr6x6.jpg" alt="Toan Tran" width="400" height="400">
 
       </div>
     </div>
@@ -44,16 +44,16 @@
           <ul>
           <li>CECS100 - Critical Thinking in the Digital Information Age</li>  
             <li>CECS105 - Introduction to CECS</li>
-          <li>CECS110 - Beginning Web</li>
-            <li>CECS174 - Introduction to Programming</li>
-            <li>CECS200 - intermediate Web</li>
-            <li>CECS300 - Dynamic Web</li>
+          <li>CECS174 - Introduction to Programming</li>
+            <li></li>
+            <li></li>
+            <li></li>
           
           </ul>
         
       </div>
       <div class="col-md-5">
-         <h2 class="featurette-heading">CLASSES I HAVE BEEN  <span class="text-muted">TEACHING.</span></h2>
+         <h2 class="featurette-heading">CLASSES I HAVE TAKEN  <span class="text-muted">TEACHING.</span></h2>
       </div>
     </div>
  
