--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="lead">Welcome! I am Toan Tran, a student at CSULB studying Computer Science. I like to play basketball and play video games for fun.</p>
       </div>
       <div class="col-md-5">
-        <img src="allenr6x6.jpg" alt="Toan Tran" width="400" height="400">
+        <img src="" alt="Toan Tran" width="400" height="400">
 
       </div>
     </div>
@@ -53,7 +53,7 @@
         
       </div>
       <div class="col-md-5">
-         <h2 class="featurette-heading">CLASSES I HAVE TAKEN  <span class="text-muted">TEACHING.</span></h2>
+         <h2 class="featurette-heading">CLASSES I HAVE <span class="text-muted">TAKEN.</span></h2>
       </div>
     </div>
  
