--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="lead">Welcome! I am Toan Tran, a student at CSULB studying Computer Science. I like to play basketball and play video games for fun.</p>
       </div>
       <div class="col-md-5">
-        <img src="" alt="Toan Tran" width="400" height="400">
+        <img src="tordora.jpg" alt="Toan Tran" width="400" height="400">
 
       </div>
     </div>
